Reposition lp-cta illustrations to avoid overlapping text on narrower widths
- Below 1200px: pin traveler to left:0 and airplane to right:0 so
  they don't creep over the centered heading/body text as the
  viewport narrows.
- Below 768px (SP): also show them (previously display:none), with
  airplane pinned to top:0 and traveler's bottom raised to 9%.

--- a/wp-content/themes/cocoon-child-master/css/lp.css
+++ b/wp-content/themes/cocoon-child-master/css/lp.css
@@ -243,11 +243,6 @@ ol {
   position: absolute;
   display: block;
 }
-@media screen and (max-width: 768px) {
-  .lp-cta__illustration {
-    display: none;
-  }
-}
 
 .lp-cta__illustration--airplane {
   top: 57px;
@@ -255,11 +250,31 @@ ol {
   width: 204px;
   transform: rotate(8.76deg);
 }
+@media screen and (max-width: 1199px) {
+  .lp-cta__illustration--airplane {
+    right: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .lp-cta__illustration--airplane {
+    top: 0;
+  }
+}
 
 .lp-cta__illustration--traveler {
   left: 6%;
   bottom: 40px;
   width: 154px;
+}
+@media screen and (max-width: 1199px) {
+  .lp-cta__illustration--traveler {
+    left: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .lp-cta__illustration--traveler {
+    bottom: 9%;
+  }
 }
 
 .lp-footer {
